- display message This setting will be activated after the installation." 
  only during installation

Version 0.37 - 4 October 2007, by Pascal "Pixel" Rigaux

- if we probe a monitor EISA_ID but we don't have corresponding
  HorizSync/VertRefresh, we must not use the monitor info
- when checking dkms module packages, check that modules are either
  available in urpmi media, or already installed (fix detection in live)

Version 0.36 - 4 October 2007, by Pascal "Pixel" Rigaux

- better fix for typo in 0.32: don't wrongly default to "automatic" resolution
  when creating xorg.conf (in non --auto) (#34453)

Version 0.35 - 3 October 2007, by Thierry Vignaud

- updated translation

Version 0.34 - 28 September 2007, by Thierry Vignaud

- updated translation

Version 0.33 - 28 September 2007, by Olivier "blino" Blin

- we don't set ModulesPath to DRI_GLX_SPECIAL value, so we must read it
  differently so that Xconfig::various::info() is correct (#31326)
- add support for x11-driver-input-vboxmouse when inside a VirtualBox guest
- fix typo in 0.32: don't wrongly default to "automatic" resolution when
  creating xorg.conf (in non --auto)

Version 0.32 - 26 September 2007, by Pascal "Pixel" Rigaux

- monitor-probe-using-X can now return EDIDs. if Xorg find an EDID (whereas
  monitor-get-edid-using-vbe failed), defaults to "Plug'n Play" monitor (ie
  let Xorg do things automatically) instead of good_default_monitor.
  (requires monitor-edid 1.12)
- fix typo in 0.30: do not use "Automatic" resolution by default in --auto

Version 0.31 - 25 September 2007, by Thierry Vignaud

- updated translation

Version 0.30 - 25 September 2007, by Pascal "Pixel" Rigaux

- add support for "Automatic" resolution (aka "let xorg do everything")
- when user asks for "Plug'n Play", silently default to Xorg auto-detection
  when we fail to auto-detect

Version 0.29 - 21 September 2007, by Olivier "blino" Blin

- unload drivers loaded by monitor-probe-using-X